modificata tutta la logica del backend, andando ad aggiungere nuove chiamate API + sistema di notifica + gestione completa per i ticket + cateogrie e servizi. Parte frontnend con angular implementata, con dashboard + category list + service list + create ticket. Da completare varie pagine, come la lista dei propri ticket, + migliorare sistema di messaggistica + pagina Agents. Migliorare anche aspetti lato scss.